ganti nama apikey

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -130,7 +130,7 @@
             Foodify.
         </div>
         <div class="nav-wrapper">
-            <div class="nav-link active" onclick="switchTab('dashboard', this)">🏠 Dashboard</div>
+            <div class="nav-link active" onclick="switchTab('dashboard', this)">🏠 API Key</div>
             <div class="nav-link" onclick="switchTab('api-feed', this)">🍽️ Menu Catalog</div>
             <div class="nav-link" onclick="switchTab('explorer', this)">🔍 API Explorer</div>
         </div>
